# blackline

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  PLANS.md  PROJECT_CONTEXT.md  README.md  README_RU.md  vcpkg.json
.agents/skills/blackline-engine/: SKILL.md
.codex/: config.toml
.github/workflows/: windows-ci.yml
apps/bootstrap/: CMakeLists.txt  main.cpp
assets/: PLACEHOLDERS.md
cmake/: BlacklineProjectOptions.cmake
docs/: ARCHITECTURE.md  ASSET_PIPELINE.md  CODING_STANDARDS.md  DEPENDENCIES.md  GAME_DESIGN.md  NETWORKING.md  RENDERING_RHI.md  REPOSITORY_WORKFLOW.md  ROADMAP.md  SECURITY.md  TESTING.md
docs/adr/: 0001-technology-baseline.md  0002-game-driven-engine.md
docs/plans/: 2026-07-13-bootstrap.md
engine/core/: CMakeLists.txt
engine/core/include/bl/core/: version.hpp
engine/core/src/: version.cpp
prompts/: 00_BOOTSTRAP.md  01_PHASE_0_FOUNDATION.md  02_PHASE_1_PLATFORM.md  03_PHASE_2_RHI_D3D11.md  TASK_TEMPLATE.md
tests/: CMakeLists.txt  core_version_test.cpp
